--- a/index.html
+++ b/index.html
@@ -90,6 +90,66 @@
                 <span class="date">2:09 pm</span>
               </div>
             </li>
+            <li class="member">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSImhrk_R9iC1DtID7a9M7ouwDtvB_ourZY5w&usqp=CAU"
+                alt="">
+              <div class="name">
+                <h3>thomas bangalter</h3>
+                <p>i was wondering ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
+                <span class="date">2:09 pm</span>
+              </div>
+            </li>
+            <li class="member">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQy8_l-NUc-I5HoS2FQzrljDd5rrbLQqULorw&usqp=CAU"
+                alt="">
+              <div class="name">
+                <h3>dog woofson</h3>
+                <p>i've forgotten how it felt bbbbbbbbbbbbbbbbbb</p>
+                <span class="date">1:44 pm</span>
+              </div>
+            </li>
+            <li class="member">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpq-D_mNYfW531QWhAc1fVqW2XWdO9fCzO6Q&usqp=CAU"
+                alt="">
+              <div class="name">
+                <h3>louis CK</h3>
+                <p>but we're probably gonna aaaaaaaaaaaaaaaaaaa</p>
+                <span class="date">2:09 pm</span>
+              </div>
+            </li>
+            <li class="member">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaTEJLWAoRb2Iq93oKlvjIkdiDyZ9mGHQ3dw&usqp=CAU"
+                alt="">
+              <div class="name">
+                <h3>bo jackson</h3>
+                <p>it's not that bad ddddddddddddddddddddddddddddddd</p>
+                <span class="date">2:09 pm</span>
+              </div>
+            </li>
+            <li class="member">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVguuSK25N-_2r6B9vp5J-TreN3462dPTQAw&usqp=CAU"
+                alt="">
+              <div class="name">
+                <h3>michael jordan</h3>
+                <p>wasup for the third time li lllllllllllllllllll</p>
+                <span class="date">2:09 pm</span>
+              </div>
+            </li>
+            <li class="member">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIvNRAu6lhqeqH0fexU5NtocTVa9eW7XZWsA&usqp=CAU"
+                alt="">
+              <div class="name">
+                <h3>drake</h3>
+                <p>howdoyoudospace</p>
+                <span class="date">2:09 pm</span>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
@@ -98,14 +158,25 @@
           <h3><span class="to">to:</span>drake</h3>
         </header>
         <div class="chat-page">
-          <span class="date">monday,1:27 PM</span>
           <div class="messages">
+            <span class="date">monday,1:27 PM</span>
+            <p class="friend">so, how's your new phone?</p>
+            <p class="friend">you finally have a smartphone :D</p>
+            <p class="me">drake?</p>
+            <p class="me">Why aren't you answering?</p>
+            <p class="friend">howdoyoudospace</p>
+            <p class="friend">so, how's your new phone?</p>
+            <p class="friend">you finally have a smartphone :D</p>
+            <p class="me">drake?</p>
+            <p class="me">Why aren't you answering?</p>
+            <p class="friend">howdoyoudospace</p>
             <p class="friend">so, how's your new phone?</p>
             <p class="friend">you finally have a smartphone :D</p>
             <p class="me">drake?</p>
             <p class="me">Why aren't you answering?</p>
             <p class="friend">howdoyoudospace</p>
           </div>
+          <div class="clear"></div>
           <form action="" class="send">
             <i class="fas fa-paperclip"></i>
             <input type="text" name="message">
