--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </section>
       <section class="chat">
         <header>
-          <h3><span class="to">to:</span><strong id="send-to">drake</strong></h3>
+          <h3><span class="to">to:</span><strong id="send-to"></strong></h3>
         </header>
         <div class="chat-page">
           <div class="messages">
